# PDA2CFG

./: CMakeLists.txt  cfg.txt  pda.txt  pda.txt.0
include/cfg/: cfg.hpp
include/pda/: pda.hpp
src/: cfg.cpp  pda.cpp  pda_cfg.cpp  simplify.cpp
